Revert "test all function"
This reverts commit cef7313430e407e45381b74828ae72bef2484dd0.

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
-We are no longer Wired, we are Wild Seas!
+I've just created my 1st website.
+Be patient, you're going to see information soon there.
   </body>
 </html>
